<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:src="@drawable/guni_pink_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardElevation="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            >
            <TextView
                android:id="@+id/textview1"
                android:layout_width="@dimen/textview_width"
                android:layout_height="wrap_content"
                android:text="@string/user_fn"
                android:textSize="@dimen/textsize"
                android:layout_marginTop="@dimen/margin"
                android:paddingHorizontal="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                />
            <EditText
                android:id="@+id/edittext1"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="Full name"
                android:inputType="text"
                android:autofillHints="username"
                app:layout_constraintStart_toEndOf="@id/textview1"
                app:layout_constraintBaseline_toBaselineOf="@id/textview1"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <TextView
                android:id="@+id/textview2"
                android:layout_width="@dimen/textview_width"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="@dimen/textsize"
                android:layout_marginTop="@dimen/margin"
                app:layout_constraintStart_toStartOf="@id/textview1"
                app:layout_constraintTop_toBottomOf="@id/textview1"
                />

            <EditText
                android:id="@+id/edittext2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="number"
                app:layout_constraintStart_toStartOf="@id/edittext1"
                app:layout_constraintStart_toEndOf="@id/textview2"
                app:layout_constraintBaseline_toBaselineOf="@id/textview2"
                />
            <TextView
                android:id="@+id/textview3"
                android:layout_width="@dimen/textview_width"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textSize="@dimen/textsize"
                android:layout_marginTop="@dimen/margin"
                app:layout_constraintStart_toStartOf="@id/textview2"
                app:layout_constraintTop_toBottomOf="@id/textview2"
                />
            <EditText
                android:id="@+id/edittext3"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/city"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="@id/edittext1"
                app:layout_constraintBaseline_toBaselineOf="@id/textview3"
                app:layout_constraintStart_toEndOf="@id/textview3"
                />
            <TextView
                android:id="@+id/textview4"
                android:layout_width="@dimen/textview_width"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="@dimen/textsize"
                android:layout_marginTop="@dimen/margin"
                app:layout_constraintStart_toStartOf="@id/textview1"
                app:layout_constraintTop_toBottomOf="@id/textview3"
                />
            <EditText
                android:id="@+id/edittext4"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                app:layout_constraintStart_toStartOf="@id/edittext1"
                app:layout_constraintStart_toEndOf="@id/textview4"
                app:layout_constraintBaseline_toBaselineOf="@id/textview4"
                />
            <TextView
                android:id="@+id/textview5"
                android:layout_width="@dimen/textview_width"
                android:layout_height="wrap_content"
                android:text="@string/pass"
                android:textSize="@dimen/textsize"
                android:layout_marginTop="@dimen/margin"
                app:layout_constraintStart_toStartOf="@id/textview1"
                app:layout_constraintTop_toBottomOf="@id/textview4"
                />
            <EditText
                android:id="@+id/edittext5"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="numberPassword"
                app:layout_constraintStart_toStartOf="@id/edittext1"
                app:layout_constraintStart_toEndOf="@id/textview5"
                app:layout_constraintBaseline_toBaselineOf="@id/textview5"
                />
            <TextView
                android:id="@+id/textview6"
                android:layout_width="@dimen/textview_width"
                android:layout_height="wrap_content"
                android:text="@string/confirm_pass"
                android:textSize="@dimen/textsize"
                android:layout_marginTop="@dimen/margin"
                app:layout_constraintStart_toStartOf="@id/textview1"
                app:layout_constraintTop_toBottomOf="@id/textview5"
                />
            <EditText
                android:id="@+id/edittext6"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_pass"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="@id/edittext1"
                app:layout_constraintStart_toEndOf="@id/textview6"
                app:layout_constraintBaseline_toBaselineOf="@id/textview6"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="45dp"
                app:layout_constraintTop_toBottomOf="@id/textview6"
                app:layout_constraintStart_toStartOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cardview"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="35dp"
        android:layout_marginTop="-25dp"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_register"
            android:textSize="@dimen/btn_size"
            android:layout_marginTop="@dimen/margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview6"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>



    <TextView
        android:id="@+id/textview7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Do you have an account?"
        android:textSize="@dimen/textsize"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintStart_toStartOf="@id/cardview"
        app:layout_constraintEnd_toEndOf="@id/cardview"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintTop_toBottomOf="@id/card2"
        />
    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:textColor="@color/pink"
        android:backgroundTint="@android:color/transparent"
        app:layout_constraintBaseline_toBaselineOf="@id/textview7"
        app:layout_constraintStart_toEndOf="@id/textview7"
        app:layout_constraintHorizontal_bias="0.9"
        />
    
</androidx.constraintlayout.widget.ConstraintLayout>